changed on-hover (fix)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,6 @@
-api-display-purposes==0.0.3
-appdirs==1.4.4
-APScheduler==3.6.3
-async-generator==1.10
-attrs==21.4.0
-autoit==0.2.3
-beautifulsoup4==4.10.0
-boto3==1.20.26
-botocore==1.23.26
-Brotli==1.0.9
-cachetools==4.2.2
-certifi==2021.10.8
-cffi==1.15.0
-chardet==3.0.4
-charset-normalizer==2.0.9
-clarifai==2.6.2
-click==8.0.4
-colorama==0.4.3
-configparser==3.8.1
-cryptography==36.0.1
-cssselect==1.1.0
 dash==2.3.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-decorator==4.0.11
-Deprecated==1.2.13
-docutils==0.15.2
-EasyProcess==0.3
-emoji==1.6.1
-fake-useragent==0.1.11
-filetype==1.0.5
 Flask==2.0.3
-Flask-Compress==1.11
-future==0.18.2
-fuzzywuzzy==0.18.0
-googleapis-common-protos==1.54.0
-grpcio==1.43.0
-gunicorn==20.1.0
-h11==0.12.0
-huepy==1.2.1
-idna==2.10
-imageio==2.13.5
-imageio-ffmpeg==0.4.5
-importlib-metadata==4.10.0
-iniconfig==1.1.1
-itsdangerous==2.1.1
-Jinja2==3.0.3
-jmespath==0.10.0
-jsonschema==2.6.0
-keyring==9.3.1
-keyrings.alt==3.2.0
-lxml==4.7.1
-MarkupSafe==2.1.1
-MeaningCloud-python==2.0.0
-mock==4.0.3
-numpy==1.22.0
-outcome==1.1.0
-packaging==21.3
 pandas==1.4.1
-Pillow==8.4.0
 plotly==5.6.0
-pluggy==1.0.0
-plyer==2.0.0
-proglog==0.1.9
-protobuf==3.19.1
-py==1.11.0
-pyasn1==0.4.8
-pycparser==2.21
-pyee==8.2.2
-pyOpenSSL==21.0.0
-pyparsing==3.0.6
-pyppeteer==0.2.6
-pyppeteer-stealth==2.7.3
-pyquery==1.2.9
-PySocks==1.7.1
-pyTelegramBotAPI==4.2.2
-pytest==6.2.5
-python-dateutil==2.8.2
-python-Levenshtein==0.12.2
-python-telegram-bot==13.10
-
-pytz==2021.3
-PyVirtualDisplay==2.2
-PyYAML==5.4.1
 redis==4.1.0
-regex==2021.11.10
-requests==2.26.0
-requests-ip-rotator==1.0.10
-requests-toolbelt==0.9.1
-responses==0.16.0
-rsa==4.7.2
-s3transfer==0.5.0
-schedule==1.1.0
-selenium==4.1.0
-semantic-version==2.8.5
-setuptools-rust==1.1.2
-six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-telebot==0.0.4
-tenacity==8.0.1
-toml==0.10.2
-tornado==6.1
-tqdm==4.62.3
-trio==0.19.0
-trio-websocket==0.9.2
-typing_extensions==4.0.1
-tzlocal==2.0.0
-urllib3==1.26.7
-webdriverdownloader==1.1.0.3
-websockets==9.1
-Werkzeug==2.0.3
-wrapt==1.13.3
-wsproto==1.0.0
-zipp==3.6.0
+statsmodels~=0.13.2
