--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dash==2.3.0
+dash_bootstrap_components==1.0.3
 Flask==2.0.3
 gunicorn==20.1.0
+numpy==1.22.0
 pandas==1.4.1
 plotly==5.6.0
 redis==4.1.0
